# kivy-audioplayer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
kivy_audioplayer/: __init__.py  _conversions.py  _utils.py  _version.py  audioplayer.py  type_hints.py
kivy_audioplayer/_os_integration/: _android_player.py  _linux_player.py  _windows_player.py
tests/: test_utils.py
