[metadata]
name = kivy_audioplayer
version = 0.0.1
author = Eastern-Skill7173
description = An audio player utility to be used in your kivy app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eastern-Skill7173/kivy-audioplayer

[options]
package_dir =
    =.
packages =
    kivy_audioplayer
python_requires = >=3.5
